Fix map size on ie9

--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,6 @@ nav a:hover {
 
 svg {
     width: 100%;
-    height: 100%;
 }
 
 /* ===============
